tests/vdq-rta/should_fail/T24159_pat_parse_error_5.hs
{-# LANGUAGE RequiredTypeArguments #-}
module T24159_pat_parse_error_5 where

f (forall a. b) = ()
